--- a/ENV-2/Makefile.txt
+++ b/ENV-2/Makefile.txt
@@ -1,16 +1,14 @@
 all: main
 
-main: main.o
-        g++ main.o -o main
+main: main.o complex.o
+        g++ main.o complex.o -o main
+
+complex.o: complex.cpp complex.h
+        g++ -c complex.cpp
 
 main.o: main.cpp
-        g++ main.cpp  -c -o main.o
-
-complex.h:
-        g++ complex.h  -c
-
-sort.h:
-        g++ sort.h  -c
+        g++ -c main.cpp
 
 clean:
         rm *.o main
+
