--- a/ENV-4/FS-3/Makefile
+++ b/ENV-4/FS-3/Makefile
@@ -1,9 +1,9 @@
 all: hacker
 
-hacker:hacker.o
-	g++ hacker.o -o hacker
+hacker:hacker-rm.o
+	g++ hacker-rm.o -o hacker
 
-hacker.o: hacker-rm.cpp
+hacker-rm.o: hacker-rm.cpp
 	g++ -c hacker-rm.cpp
 
 clean:
